--- a/assignment2/recipe.html
+++ b/assignment2/recipe.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
    <title>Steves easy chili</title>
-     <link rel="stylesheet" href="css/recipestyle.css">
+     <link rel="stylesheet" href="css/recipestyle.css"/>
        <style type="text/css">
       h2 {
           color: black;
@@ -19,12 +19,12 @@
 <body>
    <p> A quick and simple chili recipe for you to enjoy</p>
    <h1>Steves Chili recipe</h1>
-   <img src="Chili-2.jpg">
+   <img src="Chili-2.jpg"/>
    <hr>
   <table border="1">
 
      <tr>
-       <th id="firstcol">Ingredients</th>
+       <th>Ingredients</th>
        <th>Quantity</th>
      </tr>
      <tr>
