--- a/assignment3/Index.html
+++ b/assignment3/Index.html
@@ -23,7 +23,7 @@
         </div>  
       </div>       
     <hr>
-     <a href="mailto:nekidsteve@gmail.com">nekidsteve@gmail.com</a>Phone# 727-867-5823</p>
+     <a href="mailto:nekidsteve@gmail.com">nekidsteve@gmail.com</a>Phone# 727-867-5823
   </div>
    </body>
 </html>
