--- a/assignment3/recipe.html
+++ b/assignment3/recipe.html
@@ -22,7 +22,7 @@
 
  <div>
 
-   <a href="index.html" />Home</a>
+   <a href="index.html">Home</a>
  </div>
    <p> A quick and simple chili recipe for you to enjoy</p>
    <h1>Steve's Chili recipe</h1>
