its right this time

--- a/assignment7/index.html
+++ b/assignment7/index.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
-    <button id="hi">Click me</button>
-    <button id="array">Click me</button>
-    <button id="for">Click me</button>
-    <button id="arrayname">Click me</button>
-    <button id="P">Click me</button>
+    <button id="myname">.5</button>
+    <button id="hi">1</button>
+    <button id="array">2</button>
+    <button id="count">3</button>
+    <button id="arrayname">4</button>
+    <button id="P">5</button>
+    <button id="honk">6</button>
     <script src="ass7.js"></script>
 </body>
 
